optimize: add more mocks and mock controller.